auto-test/tests/chapter_17/invalid_types/extra_credit/prefix_incr_void.c

extern void *x;

int main(void) {
    ++(*x);
    return 0;
}